# your-podcast

./: .env.example  .gitignore  README.md  docker-compose.yml  generation_log.csv  pyproject.toml
alembic/: env.py
alembic/versions/: 4162b04ce3b8_initial_schema.py  461852330cee_many_to_many_posts_episodes.py  46983d3cf010_add_episode_table.py  5ee24d1cfe4f_add_user_model_and_episode_user_id.py  90ba26a1e517_simplify_user_model_for_rss.py  95223ba9cf30_remove_multi_user_tables.py  c1cc2c9433cb_add_episode_id_to_posts.py  e84de4a35680_add_comments_jsonb_drop_post_comments.py  faefba07f978_remove_num_comments_column.py
docs/: reddit-podcast-generator-plan.md
src/your_podcast/: __init__.py  admin.py  settings.py
src/your_podcast/cli/: __init__.py  auth.py  config.py  fetch.py  main.py
src/your_podcast/db/: __init__.py  models.py  session.py
src/your_podcast/podcast/: __init__.py  analyzer.py  chatterbox_tts.py  generator.py  google_cloud_tts.py  macos_tts.py  voice_tester.py
src/your_podcast/reddit/: __init__.py  comment_fetcher.py  fetcher.py  json_fetcher.py  oauth.py  rss_fetcher.py
tests/fixtures/: voice_test.txt
