[project]
name = "your-podcast"
version = "0.1.0"
description = "Generate personalized podcasts from Reddit content"
requires-python = ">=3.12,<3.14"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "alembic",
    "pydantic-settings",
    "typer",
    "click>=8.1.7,<8.2",  # Pin to avoid Click 8.2+ breaking change with Typer
    "rich",
    "sqladmin[full]",
    "fastapi",
    "uvicorn",
    "podcastfy",
    "pydub",
    "playwright>=1.57.0",
    "anthropic>=0.76.0",
    "chatterbox-tts>=0.1.6",
    "google-cloud-texttospeech>=2.31.0",
]

[project.scripts]
your-podcast = "your_podcast.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/your_podcast"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.uv]
# chatterbox-tts 0.1.6 requires numpy<1.26, but podcastfy requires pandas>=2.2.3
# which needs numpy>=1.26. Chatterbox works fine with newer numpy despite its constraint.
override-dependencies = ["numpy>=1.26.0"]

[tool.uv.extra-build-dependencies]
pkuseg = ["numpy"]